creating ChangeLog
2003-04-16 David Malcolm

	* cong-document.c, cong-document.h, cong-dummy-element-editor.c, cong-editor-widget-impl.h, cong-font.c, cong-menus.c, cong-primary-window.c, cong-section-head-editor.c, cong-source-view.c, cong-span-text-editor.c, cong-test-view.c, cong-tree-view.c, cursor.c, global.h, main.c, plugin-lists.c, plugin-xsl.c, popup.c, tree.c, xmldata.c, xmledit.c, select.c

	Split global.h up; use stock icons for toolbar; big cleanup of font handling; a disabled attempt to make the delete key work better with selections; various minor cleanups
	
	* cong-font.h, cong-location.h, cong-node.h, cong-view.h

	Initial import
	
2003-04-15 David Malcolm

	* cong-dispspec-registry.c, cong-document.c, cong-menus.c, cong-editor-widget.c, cong-plugin.c, cong-span-text-editor.c, cong-test-view.c, cong-tree-view.c, cursor.c, dispspec.c, open.c, plugin-docbook.c

	Numerous small cleanups

	* cong-progress-checklist.c, cong-progress-checklist.h

	Initial import

	* Makefile.am

	Added cong-progress-checklist.c
	
2003-04-11 David Malcolm

	* cong-document.c, cong-eel.c, cong-eel.h, cong-error-file-save.c, cong-file-export.c, cong-file-import.c, cong-menus.c, cong-plugin.c, cong-plugin.h, file.c, global.h, main.c, open.c, plugin-docbook.c, plugin-tests.c, save.c, xmldata.c

	Lots of work on exporter plugins, and various small fixes along the way.	
	
2003-04-08 David Malcolm

	* cong-menus.c, global.h

	Bulk of import/export UI moved into new files
	
	* cong-file-import.c, cong-file-export.c

	Initial import
	
	* Makefile.am

	Added cong-file-import.c and cong-file-export.c
	
	* cong-document.c, cong-document.h, cong-span-text-editor.c, global.h, popup.c, save.c, tree.c

	More transient window fixes

	* cong-menus.c

	Fixed typo in comment

	* cong-plugin.c, new_doc.c

	Fixed warnings
	
2003-04-04 David Malcolm
